# gofer2

./: Cargo.toml  README.md
resources/: icon.icns  mappings.csv
src/: clipboard.rs  data.rs  logger.rs  main.rs  menu.rs  notification.rs  search.rs  utils.rs
