[package]
name = "gofer2"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.26"
core-foundation = "0.10"
csv = "1.2"
log = "0.4"
mac-notification-sys = "0.6"
objc = "0.2"
oslog = "0.2"
serde = { version = "1.0", features = ["derive"] }

# Mac App Bundle configuration for the `cargo bundle` command (optional)
[package.metadata.bundle]
category = "Developer Tool"
copyright = "Copyright (c) 2024 Ofer Affias"
icon = ["resources/app_icon.icns"]
identifier = "com.1000ants.gofer2"
name = "Gofer2"
resources = ["resources/images/*.png", "resources/*.csv"]
short_description = "A clipboard translation tool"
