[package]
name = "gofer2"
version = "1.2.0"
edition = "2024"
description = "A clipboard translation tool"

[dependencies]
cocoa = "0.26"
core-foundation = "0.10"
csv = "1.2"
log = "0.4"
mac-notification-sys = "0.6"
objc = "0.2"
oslog = "0.2"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
fuzzy-matcher = "0.3"

[patch.crates-io]
objc = { git = "https://github.com/warpdotdev/rust-objc.git", branch = "warpdotdev/0.2.7" }

# Mac App Bundle configuration for the `cargo bundle` command (optional)
[package.metadata.bundle]
category = "Developer Tool"
icon = ["resources/app_icon.icns"]
identifier = "com.1000ants.gofer2"
name = "Gofer2"
resources = ["resources/images/*.png", "resources/*.csv"]
short_description = "A clipboard translation tool"
long_description = "Gofer2 is a clipboard translation tool that allows users to load mapping CSV files from the ~/.gofer2 directory."
